# actix_sqx_app

./: .env  Cargo.toml  README.md
src/: errors.rs  main.rs
src/api/: mod.rs
src/api/admin/: handlers.rs  routes.rs
src/api/users/: handlers.rs  mod.rs  models.rs  routes.rs
src/api/users/auth/: auth_token.rs  mod.rs  utils.rs
src/api/users/db/migrations/: 20240320102712_create_users_table.sql  20240324122549_hash_mod.sql  20240324155457_user_profile.sql  20240325153707_user_profile.sql  20240328100700_user_profile_oncascade.sql
src/middleware/: jwt_middleware.rs
src/utils/: jwt.rs  mod.rs  send_email.rs
