[package]
name = "actix_backend_articles"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
env_logger = "0.11.3"
dotenv = "0.15.0"
actix-session = "0.5"
bcrypt = "0.10.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "^0", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
