[package]
name = "actix_backend_articles"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.1"
actix-session = "0.5"
actix-multipart = "0.6.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
bcrypt = "0.10.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "^0", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
derive_more = "0.99.0"
serde_json = "1.0.105"
thiserror = "1.0.48"
futures-util = "0.3.30"
sanitize-filename = "0.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
mime = "0.3.17"
lettre = "=0.11.5"
